@@ -43,6 +43,8 @@ Minor Changes:
  * Combined fun_setinter, fun_setdiff and fun_setunion into fun_setmanip. [GM]
  * For hardcoders: list2arr and list2arr_ansi now take a third argument
    on whether to include empty items. [GM]
+ * page and @mail will report to you if your recipient(s) cannot reply
+   to you. Suggested by Paige. [GM]
 
 Fixes:
  * Help fixes by Daniel Powell. [MG]
