@@ -1090,7 +1090,7 @@ FUNCTION(fun_benchmark)
       safe_dbref(thing, buff, bp);
       return;
     }
-    if (!okay_pemit(executor, thing)) {
+    if (!okay_pemit(executor, thing, 1)) {
       notify_format(executor, T("I don't think #%d wants to hear from you."),
                     thing);
       safe_str("#-1", buff, bp);
